--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,18 @@
         <title>Vancouver Parks</title>
         <link href="css/jquery-ui.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     </head>
     <body>
         <div id="map"></div>
         <aside id="sidebar" data-bind="style: {height: isParkListVisible()? '100%' : 'auto'}">
             <div id="searchBar">
-                <button class="hamburgerIcon" data-bind="click: toggleParkList">&#9776;</button>
-                <form data-bind="submit: searchParks">
+                <img src="img/hamburger_icon.png" class="hamburgerIcon" data-bind="click: toggleParkList">
+                <form id="searchBarForm" data-bind="submit: searchParks">
                     <input type="text" id="searchBarInput" data-bind="textInput: searchQuery">
                 </form>
+                <img src="img/search.png" class="searchIcon" data-bind="click: searchParks">
+                <img src="img/reset.png" class="resetIcon" data-bind="click: resetParkList">
             </div>
             <ul id="parkList" data-bind="visible: isParkListVisible, foreach: parkList">
                 <li class="parkListItem" data-bind="text: name, click: $root.displayInfoWindow"></li>
