--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
         <title>Vancouver Parks</title>
         <link href="css/jquery-ui.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     </head>
     <body>
         <div id="map"></div>
@@ -23,7 +22,7 @@
                     <li class="parkListItem" data-bind="text: name, click: $root.displayInfoWindow"></li>
                 <!-- /ko -->
                 <li class="lastListItem" data-bind="visible: parkList().length !== 0"></li>
-                <li class="noResultListItem" data-bind="visible: parkList().length === 0">No Results Found</li>
+                <li class="noResultListItem" data-bind="visible: parkList().length === 0">No Matching Parks</li>
             </ul>
         </aside>
     	<script type="text/javascript" src="js/lib/jquery-3.3.1.js"></script>
