--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                     <li class="parkListItem" data-bind="text: name, click: $root.displayInfoWindow"></li>
                 <!-- /ko -->
                 <li class="lastListItem" data-bind="visible: parkList().length !== 0"></li>
-                <li class="noResultListItem" data-bind="visible: parkList().length === 0">No Matching Parks</li>
+                <li class="noResultListItem" data-bind="visible: parkList().length === 0">No Parks Found</li>
             </ul>
         </aside>
     	<script type="text/javascript" src="js/lib/jquery-3.3.1.js"></script>
