--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,22 @@
     </head>
     <body>
         <div id="map"></div>
+        <div id="infoWindowTemplate">
+            <div id="infoWindowContent">
+                <h3 class="infoWindowHeader" data-bind="text: parkName()"></h3>
+                <p class="infoWindowParkAddress" data-bind="text: parkAddress()"></p>
+                <div id="yelpContent" data-bind="visible: hasYelpContent">
+                    <p data-bind="visible: !hasYelpRating()">No Yelp Reviews Available</p>
+                    <div data-bind="visible: hasYelpRating()">
+                        <img id="yelpRatingStars" height="20px" data-bind="attr: {src: imgSource}">
+                        <a data-bind="attr: {href: yelpURL()}">
+                            <img id="yelpTM" height="40px" src="img/Yelp_tm.png">
+                        </a>
+                        <p id="ratingSummary" data-bind="text: ratingSummary"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <aside id="sidebar" data-bind="style: {height: isParkListVisible()? '100%' : 'auto'}">
             <div id="searchBar">
                 <img src="img/hamburger_icon.png" class="hamburgerIcon" data-bind="click: toggleParkList">
@@ -30,8 +46,10 @@
         <script type="text/javascript" src="js/lib/knockout-3.5.0rc.js"></script>
         <script src="js/lib/external/jquery/jquery.js"></script>
         <script src="js/lib/jquery-ui.js"></script>
+        <script type="text/javascript" src="js/constants.js"></script>
         <script type="text/javascript" src="js/models/park.js"></script>
-        <script type="text/javascript" src="js/viewmodels/parkMapViewmodel.js"></script>
+        <script type="text/javascript" src="js/viewmodels/infoWindowViewModel.js"></script>
+        <script type="text/javascript" src="js/viewmodels/parkMapViewModel.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3A1RBSZKAOEL32uhwnstnAoL4qfjXQ8w&callback=viewModel.initGoogleMap" onerror="alert('Failed to load Google Maps API')" async defer></script>
     </body>
 </html>
